deployment/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: airavata
  labels:
    app.kubernetes.io/part-of: airavata
